#class_name
extends CenterContainer
"""
Script description
"""
################################################################# SIGNALS ################################################################
################################################################# ENUMS ##################################################################
################################################################# CONSTANTS ##############################################################
################################################################# EXPORT VAR #############################################################
################################################################# PUBLIC VAR #############################################################
################################################################# PRIVATE VAR ############################################################
################################################################# ONREADY VAR ############################################################
################################################################# SETTERS & GETTERS ######################################################
################################################################# BUILT-IN METHODS #######################################################
################################################################# PUBLIC METHODS #########################################################
################################################################# PRIVATE METHODS ########################################################
func _on_ResumeButton_pressed() -> void:
	pass # Replace with function body.


func _on_NewButton_pressed() -> void:
	pass # Replace with function body.


func _on_SaveButton_pressed() -> void:
	pass # Replace with function body.


func _on_LoadButton_pressed() -> void:
	pass # Replace with function body.


func _on_SettingsButton_pressed() -> void:
	pass # Replace with function body.


func _on_QuitButton_pressed() -> void:
	get_tree().quit()
